Generics_Extend/Code10_error_report.txt
javac errors for Code10.java 
Code10.java:26: error: method compare in class Code10 cannot be applied to given types;
		System.out.println(Code10.compare(123, "abc")); // Error
		                         ^
  required: T,T
  found: int,String
  reason: inference variable T has incompatible bounds
    equality constraints: Integer,String
    lower bounds: String,Integer
  where T is a type-variable:
    T extends Comparable<T> declared in method <T>compare(T,T)
1 error
 
============================================================================= 
ExtendJ errors for Code10.java 
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\Generics_Extend\Code10.java:26: error: no method named compare(int, java.lang.String) in Code10 matches. However, there is a method compare(Code10.compare(java.lang.Comparable, java.lang.Comparable)@T, Code10.compare(java.lang.Comparable, java.lang.Comparable)@T)
 
============================================================================= 
Eclipse ECJ errors for Code10.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\Generics_Extend\Code10.java (at line 26)
	System.out.println(Code10.compare(123, "abc")); // Error
	                          ^^^^^^^
The method compare(T, T) in the type Code10 is not applicable for the arguments (int, String)
----------
1 problem (1 error)
